Add-Opens defined in  the manifest file(Java>10) and new gradle format,